# fnapy

./: .gitignore  .konchrc  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.html  CHANGELOG.rst  ChangeLog  LICENSE.txt  MANIFEST.in  Makefile  NOTES.md  Pipfile  README.md  README.rst  api.html  api.rst  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  searchindex.js  setup.cfg  setup.py  tox.ini
.tox/py27/: .tox-config1  pip-selfcheck.json
_build/doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
_sources/: index.txt  quickstart.txt
_themes/kr-sphinx-themes/: README.html
docs/: CHANGELOG.rst  Makefile  conf.py  quickstart.rst
fnac/: connection.py  fnac_manager.py
fnapy/: compat.py  config.py  connection.py  exceptions.py  fnapy_manager.py  utils.py
fnapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bumpversion.py  deploy_ghpages
tests/: __init__.py  test_connection.py  test_http_messages.py  test_query.py  test_utils.py
tests/assets/: auth_response.xml  batch_status.xml  batch_status_response.xml  carriers_query_response.xml  delete_offers_request.xml  delete_offers_response.xml  get_batch_status_response.xml  messages_sample.xml  offers_query_response.xml  offers_update_response.xml  orders_query_response.xml  query_client_order_comments_response.xml  query_incidents_response.xml  query_messages_request.xml  query_messages_response.xml  query_offers_request.xml  query_offers_response.xml  query_offers_with_multiple_parameters_response.xml  query_orders_created_between_dates_response.xml  query_orders_request.xml  query_orders_response.xml  query_pricing_more_than_ten_eans_request.xml  query_pricing_more_than_ten_eans_response.xml  (+27 more)
(+68 files in other folders)
