[tool.poetry]
name = "fnapy"
version = "1.3.0"
description = "Python library for FNAC WebServices"
authors = ["Taurus Olson <taurusolson@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/alexandriagroup/fnapy/"
keywords = ["fnac", "api"]

[tool.poetry.dependencies]
python = "3.9.7"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
jedi = "^0.18.0"
fntools = "^1.1.2"
tox = "^3.24.4"
pytest = "^6.2.5"
twine = "^3.5.0"
pytz = "^2021.3"
konch = "^4.3.0"
python-dateutil = "^2.8.2"
ipython = "^7.29.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
