[bdist_wheel]
universal = 1

[metadata]
name = fnapy
author = Taurus Olson
author-email = taurusolson@gmail.com
license = MIT
description = A Python API for FNAC WebServices
keywords =
    api
    fnac
    python
    webservices
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    fnapy
    tests
    tests.offline
    tests.online
